--- a/index.html
+++ b/index.html
@@ -4,34 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Start Page</title>
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+          crossorigin="anonymous">
     <!-- My CSS & JavaScript -->
     <link rel="stylesheet" href="styles.css">
+    <script src="widgets/bg-widget.js" defer></script>
+    <script src="widgets/calendar-widget.js" defer></script>
     <script src="widgets/date-widget.js" defer></script>
+    <script src="widgets/notes-widget.js" defer></script>
     <script src="index.js" defer></script>
-    <!-- Bootstrap 5 JS (Optional for interactivity) -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" defer></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+            crossorigin="anonymous" defer></script>
+
 </head>
 <body>
-    <div class="container">
-        <div class="row header">
-            <div class="col widget calendar-widget-container" id="calendar-widget-container">CALENDAR</div>
-            <div class="col widget date-widget-container" id="date-widget-container"></div>
-            <div class="col widget">BG-BUTTON</div>
-        </div>
-        <div class="row main">
-            <div class="col-2 widget">FREQUENT SITES & BOOKMARKS
-                <div class="links" style="display: flex; flex-direction: column;">LINKS:
+    <div class="container d-flex flex-row justify-content-start  text-center my-5 p-3">
+        <!-- COLUMN FOR CALENDAR AND LINKS -->
+        <div class="d-flex flex-column">
+            <div class="widget calendar-widget-container d-flex flex-column justify-content-center p-2" id="calendar-widget-container"></div>
+            <div class="widget links-widget-container mt-3" style="max-width: 60%;" id="links-widget-container">
+                <div class="links my-3" style="display: flex; flex-direction: column; font-weight: bolder;">HOTLINKS
                     <a href="https://www.google.com" target="_blank">Google</a>
                     <a href="https://www.youtube.com" target="_blank">YouTube</a>
                     <a href="https://www.github.com" target="_blank">GitHub</a>
-                    <a href="https://www.reddit.com" target="_blank">Reddit</a>
-                    <a href="https://www.twitter.com" target="_blank">Twitter</a>
+                    <a href="https://itch.io" target="_blank">Itchio</a>
                 </div>
             </div>
-            <div class="col-10 widget">NOTEBOOK</div>
+        </div>
+        <!-- COLUMN FOR DATE, BG, AND NOTEBOOK -->
+        <div class="d-flex flex-column justify-content-start w-100">
+            <div class="d-flex flex-row h-25">
+                <div class="widget date-widget-container w-100 p-4" id="date-widget-container"></div>
+                <div class="d-flex flex-column justify-content-start w-auto">
+                    <!-- BG SELECTOR -->
+                    <div class="widget d-flex justify-content-end mb-1 w-auto h-50" id="bg-widget-container">
+                        <button id="bg-widget-btn" class="btn btn-lg btn-outline-primary">
+                            <svg xmlns='http://www.w3.org/2000/svg' width='100%' height='100%' fill='currentColor' class='bi bi-card-image' viewBox='0 0 16 16'> <path d='M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0'/> <path d='M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54L1 12.5v-9a.5.5 0 0 1 .5-.5z'/> </svg>
+                        </button>
+                    </div>
+                    <!-- NOTES SPAWNER -->
+                    <div class="widget d-flex justify-content-end mt-1 w-auto h-50" id="create-note-container">
+                        <button id="create-note-btn" class="btn btn-lg btn-outline-primary mb-3 h-100 w-100">
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-stickies" viewBox="0 0 16 16"><path d="M1.5 0A1.5 1.5 0 0 0 0 1.5V13a1 1 0 0 0 1 1V1.5a.5.5 0 0 1 .5-.5H14a1 1 0 0 0-1-1z"/><path d="M3.5 2A1.5 1.5 0 0 0 2 3.5v11A1.5 1.5 0 0 0 3.5 16h6.086a1.5 1.5 0 0 0 1.06-.44l4.915-4.914A1.5 1.5 0 0 0 16 9.586V3.5A1.5 1.5 0 0 0 14.5 2zM3 3.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 .5.5V9h-4.5A1.5 1.5 0 0 0 9 10.5V15H3.5a.5.5 0 0 1-.5-.5zm7 11.293V10.5a.5.5 0 0 1 .5-.5h4.293z"/></svg> -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-sticky" viewBox="0 0 16 16"><path d="M2.5 1A1.5 1.5 0 0 0 1 2.5v11A1.5 1.5 0 0 0 2.5 15h6.086a1.5 1.5 0 0 0 1.06-.44l4.915-4.914A1.5 1.5 0 0 0 15 8.586V2.5A1.5 1.5 0 0 0 13.5 1zM2 2.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 .5.5V8H9.5A1.5 1.5 0 0 0 8 9.5V14H2.5a.5.5 0 0 1-.5-.5zm7 11.293V9.5a.5.5 0 0 1 .5-.5h4.293z"/></svg>
+                        </button>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </div>
 </body>
