--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="widget links-widget-container mt-3" style="max-width: 60%;" id="links-widget-container">
                 <div class="links my-3" style="display: flex; flex-direction: column; font-weight: bolder;">HOTLINKS
                     <a href="https://www.google.com" target="_blank">Google</a>
+                    <a href="https://mail.google.com" target="_blank">Gmail</a>
                     <a href="https://www.youtube.com" target="_blank">YouTube</a>
                     <a href="https://www.github.com" target="_blank">GitHub</a>
                     <a href="https://itch.io" target="_blank">Itchio</a>
